# t2d-kit

./: .gitignore  .mcp.json  .mise.toml  .releaserc.json  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  mise.toml  pyproject.toml
.claude/: settings.local.json
.github/workflows/: publish.yml  release.yml  test.yml
.mise-tasks/: build  prepare  validate
.mise-tasks/mcp/: inspect  server  test
.mise-tasks/python/: build  build-clean  build-test-wheel  build-wheel  build-wheel-only  format  format-check  lint  prepare  test  test-all  test-cov  typecheck  validate
docs/: agents.md  api.md  validation-checklist.md
examples/: mcp_recipe_creation.py
examples/complex/: recipe.yaml
examples/simple/: recipe.yaml
recipes/: ecommerce-platform.yaml  example.yaml  healthcare-api.yaml  task-management.yaml  test-dict-recipe.yaml  test-json.yaml  test-model-recipe.yaml  test-recipe.yaml  two-tier-graphql-app.yaml
specs/001-i-want-to/: agent-invocation.md  data-model.md  enhanced-models.md  installation-setup.md  mcp-server.md  plan.md  quickstart.md  research.md  simplified-agents.md  spec.md  tasks.md  transformation-workflow.md
specs/002-the-user-can/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-the-user-can/contracts/: mcp_processed_tools.json  mcp_resources.json  mcp_tools.json
src/t2d_kit/: __init__.py  __main__.py  _version.py
src/t2d_kit/agents/: __init__.py  t2d-create-recipe.md  t2d-d2-generator.md  t2d-docs-generator.md  t2d-mermaid-generator.md  t2d-mkdocs-generator.md  t2d-plantuml-generator.md  t2d-slides-generator.md  t2d-transform.md  t2d-zudoku-generator.md
src/t2d_kit/cli/: __init__.py  main.py  mcp.py  mcp_cmd.py  recipe_cmd.py  recipes.py  setup.py  verify.py
src/t2d_kit/generators/: __init__.py  d2_generator.py
src/t2d_kit/mcp/: __init__.py  __main__.py  server.py
src/t2d_kit/mcp/resources/: __init__.py  diagram_types.py  processed_recipes.py  schemas.py  user_recipes.py
src/t2d_kit/mcp/tools/: __init__.py  processed_recipe_tools.py  user_recipe_tools.py
src/t2d_kit/mcp/utils/: __init__.py
src/t2d_kit/models/: __init__.py  base.py  content.py  d2_options.py  diagram.py  diagram_spec.py  marp_config.py  mcp_resources.py  mermaid_config.py  mkdocs_config.py  processed_recipe.py  state.py  user_recipe.py
src/t2d_kit/utils/: __init__.py  d2_utils.py  recipe_discovery.py  schema_formatter.py  state_management.py  validation.py
tests/: __init__.py  conftest.py  test_smoke.py
tests/contract/: test_mcp_resources.py  test_processed_recipe_tools.py  test_user_recipe_tools.py
tests/integration/: test_d2_gen.py  test_mcp_recipe_flow.py  test_mcp_server_smoke.py  test_mkdocs.py  test_transform.py
tests/performance/: test_processing.py
tests/unit/: test_diagram_spec.py  test_mcp_json_params.py  test_mcp_read.py  test_mcp_write.py  test_processed_recipe.py  test_state_manager.py  test_user_recipe.py  test_user_recipe_fixed.py
